math-core/src/snapshots/math_core__tests__prime_command.snap
---
source: math-core/src/lib.rs
expression: "f^\\prime"
---
<math>
    <msup>
        <mi>f</mi>
        <mo>′</mo>
    </msup>
</math>
