math-core/src/snapshots/math_core__tests__product.snap
---
source: math-core/src/lib.rs
expression: "\\prod_n n"
---
<math>
    <munder>
        <mo lspace="0">∏</mo>
        <mi>n</mi>
    </munder>
    <mi>n</mi>
</math>
