math-core/src/snapshots/math_core__tests__quintuple_prime.snap
---
source: math-core/src/lib.rs
expression: "f'''''"
---
<math>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
        </mrow>
    </msup>
</math>
