math-core/src/snapshots/math_core__tests__really_standalone_superscript.snap
---
source: math-core/src/lib.rs
expression: ^2
---
<math>
    <msup>
        <mrow>
        </mrow>
        <mn>2</mn>
    </msup>
</math>
