math-core/src/snapshots/math_core__tests__really_standalone_underscore.snap
---
source: math-core/src/lib.rs
expression: _2
---
<math>
    <msub>
        <mrow>
        </mrow>
        <mn>2</mn>
    </msub>
</math>
