math-core/src/snapshots/math_core__tests__root_log.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt[\\log]{x}"
---
<math>
    <mroot>
        <mi>x</mi>
        <mo lspace="0" rspace="0">log</mo>
    </mroot>
</math>
