math-core/src/snapshots/math_core__tests__root_op.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt[+]{x}"
---
<math>
    <mroot>
        <mi>x</mi>
        <mo>+</mo>
    </mroot>
</math>
