math-core/src/snapshots/math_core__tests__scriptstyle.snap
---
source: math-core/src/lib.rs
expression: "\\sum_{\\genfrac{}{}{0pt}{}{\\scriptstyle 0 \\le i \\le m}{\\scriptstyle 0 < j < n}} P(i, j)"
---
<math>
    <munder>
        <mo>∑</mo>
        <mrow>
            <mo></mo>
            <mfrac linethickness="0">
                <mrow displaystyle="false" scriptlevel="1">
                    <mn>0</mn>
                    <mo>≤</mo>
                    <mi>i</mi>
                    <mo>≤</mo>
                    <mi>m</mi>
                </mrow>
                <mrow displaystyle="false" scriptlevel="1">
                    <mn>0</mn>
                    <mo>&lt;</mo>
                    <mi>j</mi>
                    <mo>&lt;</mo>
                    <mi>n</mi>
                </mrow>
            </mfrac>
            <mo></mo>
        </mrow>
    </munder>
    <mi>P</mi>
    <mo stretchy="false">(</mo>
    <mi>i</mi>
    <mo>,</mo>
    <mi>j</mi>
    <mo stretchy="false">)</mo>
</math>
